--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+
 sudo: required
 
 language: scala
@@ -11,7 +13,7 @@ cache:
     - $HOME/.sbt
 
 before_install:
-- docker run -d -p 9200:9200 -p 9300:9300 -e "path.repo=/tmp" -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:6.5.2
+- docker run -d -p 9200:9200 -p 9300:9300 -e "path.repo=/tmp" -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:6.8.4
 
 before_cache:
   - find $HOME/.sbt -name "*.lock" | xargs rm
