fix tests - attempt 1

--- a/elastic4s-tests/src/test/resources/elasticsearch.yml
+++ b/elastic4s-tests/src/test/resources/elasticsearch.yml
@@ -1,8 +1,9 @@
 cluster.name: "docker-cluster"
 network.host: 0.0.0.0
 xpack.security.enabled: true
+path.repo: "/tmp/elastic4s"
 xpack.security.authc:
   anonymous:
-    username: anonymous_user 
+    username: anonymous_user
     roles: superuser
     authz_exception: false
