update docker run command in github actions file and add repo path in elasticsearch.yml file

--- a/elastic4s-tests/src/test/resources/elasticsearch.yml
+++ b/elastic4s-tests/src/test/resources/elasticsearch.yml
@@ -1,6 +1,7 @@
 cluster.name: "docker-cluster"
 network.host: 0.0.0.0
 xpack.security.enabled: true
+path.repo: "/tmp/elastic4s"
 xpack.security.authc:
   anonymous:
     username: anonymous_user
