--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       discovery.type: single-node
       network.host: 0.0.0.0
       path.repo: /tmp/elastic4s
-      xpack.security.enabled: true
+      xpack.security.enabled: "true"
     ports:
       # use obscure ports for the tests to reduce the risk of interfering with existing elastic installations/containers
       - 39227:9200
