added verify-ssl-certificate default to reference.conf

--- a/elastic4s-client-akka/src/main/resources/reference.conf
+++ b/elastic4s-client-akka/src/main/resources/reference.conf
@@ -1,6 +1,7 @@
 com.sksamuel.elastic4s.akka {
   hosts: []
   https: false
+  verify-ssl-certificate: true
   queue-size: 1000
   blacklist {
     min-duration = 1m
