use consistent value definition added username&password comment for documentation purposes

--- a/elastic4s-client-akka/src/main/resources/reference.conf
+++ b/elastic4s-client-akka/src/main/resources/reference.conf
@@ -1,8 +1,11 @@
 com.sksamuel.elastic4s.akka {
-  hosts: []
-  https: false
-  verify-ssl-certificate: true
-  queue-size: 1000
+  hosts = []
+  https = false
+  verify-ssl-certificate = true
+  // optionally provide credentials
+  // username = ...
+  // password = ...
+  queue-size = 1000
   blacklist {
     min-duration = 1m
     max-duration = 30m
