--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -65,4 +65,4 @@ jobs:
         run: docker run -d -it -p 39227:9200 -p 39337:9300 -e "discovery.type=single-node" -v /home/runner/work/elastic4s/elastic4s/elastic4s-tests/src/test/resources/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml docker.elastic.co/elasticsearch/elasticsearch:7.15.1
 
       - name: run tests
-        run: sbt ++3.0.2 $(for i in $(cat scala3_modules); do echo $i/test; done | xargs)
+        run: sbt ++3.2.0 elastic4s-scala3/test
