Specify temurin distribution

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: 11
 
       - name: Launch elastic docker
@@ -42,6 +43,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: 11
 
       - name: Launch elastic docker
@@ -61,6 +63,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: 11
 
       - name: Launch elastic docker
