--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: master
+name: main
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
       - '*.md'
       - '*.yml'
     branches:
-      - master
+      - main
       - release/*
 
 jobs:
