--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,6 +22,9 @@ jobs:
           distribution: temurin
           java-version: 11
 
+      - name: set up sbt
+        uses: sbt/setup-sbt@v1
+
       - name: Launch elastic docker
         uses: ./.github/actions/launch-elasticsearch
 
@@ -43,6 +46,9 @@ jobs:
           distribution: temurin
           java-version: 11
 
+      - name: set up sbt
+        uses: sbt/setup-sbt@v1
+
       - name: Launch elastic docker
         uses: ./.github/actions/launch-elasticsearch
 
@@ -63,6 +69,9 @@ jobs:
         with:
           distribution: temurin
           java-version: 11
+
+      - name: set up sbt
+        uses: sbt/setup-sbt@v1
 
       - name: Launch elastic docker
         uses: ./.github/actions/launch-elasticsearch
