--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ src_managed/
 project/boot/
 project/plugins/project/
 project/credentials.sbt
+project/metals.sbt
 credentials.sbt
 test-output/
 
