--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:9.0.0-beta1
+    image: docker.elastic.co/elasticsearch/elasticsearch:9.0.0-rc1
     environment:
       discovery.type: single-node
       network.host: 0.0.0.0
